# key

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  RELEASES.md  clippy.toml  deny.toml  rust-toolchain.toml  rustc-ice-2024-12-26T20_32_42-45011.txt  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yaml  crates.yaml  verify.yaml
binding/: Cargo.toml  README.md
binding/src/: create.rs  lib.rs  provider.rs
binding/src/handlers/: document.rs
crates/did/: Cargo.toml
crates/did/examples/webvh/: Cargo.toml
crates/did/src/: document.rs  key.rs  proof.rs  resolve.rs  url.rs  verification.rs  web.rs  webvh.rs
crates/did/src/web/: create.rs  did.rs
crates/did/src/webvh/: create.rs  deactivate.rs  did.rs  resolve.rs  update.rs  verify.rs
crates/did/tests/: web_create.rs  web_dereference.rs  webvh_create.rs  webvh_deactivate.rs  webvh_resolve.rs  webvh_update.rs  webvh_verify.rs
crates/keyring/: Cargo.toml
crates/keyring/src/: lib.rs
crates/test-kms/: Cargo.toml
crates/test-kms/src/: blockstore.rs  lib.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: lib.rs
ecc/: Cargo.toml  README.md
ecc/src/: core.rs  encrypt.rs  key.rs  keyring.rs  lib.rs  sign.rs  signing.rs  vault.rs
jose/: Cargo.toml  README.md
jose/src/: jwe.rs  jwk.rs  jws.rs  lib.rs
jose/src/jwe/: decrypt.rs  encrypt.rs
se/: Cargo.toml
se/src/: encryption.rs  key.rs  lib.rs  signing.rs
src/: jose.rs  jwe.rs  jwk.rs  jws.rs  lib.rs  proof.rs
src/cose/: cbor.rs  key.rs
src/jose/: jwe.rs  jwk.rs  jws.rs  jwt.rs
src/jose/jwe/: builder.rs  decrypt.rs  encrypt.rs  key.rs
src/jwe/: decrypt.rs  encrypt.rs
src/proof/: w3c.rs
supply-chain/: README.md  audits.toml  config.toml
