[workspace]
members = ["binding", "ecc", "jose", "crates/*"]
resolver = "3"

[workspace.package]
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Credibil"]
categories = ["cryptography"]
edition = "2024"
exclude = [".*", "snapshots/"]
homepage = "https://credibil.io"
keywords = ["credentials", "decentralized", "identity", "openid", "verifiable"]
repository = "https://github.com/credibil"
rust-version = "1.88"
version = "0.1.2"

[workspace.lints.rust]
missing_docs = "warn"
unused_extern_crates = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"

[workspace.dependencies]
anyhow = "1.0.99"
base64ct = { version = "1.8.0", features = ["std"] }
credibil-api = { git = "https://github.com/credibil/core" }
credibil-core = { git = "https://github.com/credibil/core" }
credibil-did = { path = "crates/did" }
credibil-ecc = { path = "ecc" }
credibil-jose = { path = "jose" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["alloc"] }
test-utils = { path = "crates/test-utils" }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
zeroize = "1.8.1"

# [patch."https://github.com/credibil/core"]
# credibil-core = { path = "../core" }
