[workspace]
members = ["binding", "ecc", "jose", "crates/*"]
resolver = "3"

[workspace.package]
license = "MIT OR Apache-2.0"
readme = "README.md"
authors = ["Credibil"]
categories = ["cryptography"]
edition = "2024"
exclude = [".*"]
homepage = "https://credibil.io"
keywords = ["credentials", "decentralized", "identity", "openid", "verifiable"]
repository = "https://github.com/credibil"
rust-version = "1.90"
version = "0.3.0"

[workspace.lints.rust]
# https://dirname.github.io/rust-std-doc/rustc/lints/listing/allowed-by-default.html
missing_docs = "warn"
trivial_numeric_casts = "warn"
unused_extern_crates = "warn"
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
# https://doc.rust-lang.org/stable/clippy/index.html
all = "warn"      # correctness, suspicious, style, complexity, perf
nursery = "warn"
pedantic = "warn"
cargo = "warn"

# Cherry-picked lints are from the `restriction` lint group in order to drive up
# consistency, quality, and brevity
# See https://microsoft.github.io/rust-guidelines/guidelines/universal/index.html

# allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
assertions_on_result_states = "warn"
clone_on_ref_ptr = "warn"
deref_by_slicing = "warn"
disallowed_script_idents = "warn"
empty_drop = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
map_err_ignore = "warn"
redundant_type_annotations = "warn"
renamed_function_params = "warn"
semicolon_outside_block = "warn"
undocumented_unsafe_blocks = "warn"
unnecessary_safety_comment = "warn"
unnecessary_safety_doc = "warn"
unneeded_field_pattern = "warn"
unused_result_ok = "warn"

[workspace.dependencies]
anyhow = "1.0.100"
base64ct = { version = "1.8.0", features = ["std"] }
credibil-api = { version = "0.2.1", registry = "credibil" }
credibil-core = { version = "0.2.1", registry = "credibil" }
credibil-did = { path = "crates/did", version="0.3.0"}
credibil-ecc = { path = "ecc", version="0.3.0" }
credibil-jose = { path = "jose", version="0.3.0" }
dashmap = "6.1.0"
multibase = "0.9.1"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["alloc"] }
sha2 = "0.10.9"
test-utils = { path = "crates/test-utils" }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
zeroize = "1.8.1"

# [patch."https://github.com/credibil/core"]
# credibil-core = { path = "../core" }
