[package]
name = "credibil-ecc"
description = "Credibil information security utilities for signing, encryption and key management."
license.workspace = true
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
aes-gcm = "0.10.3"
aes-kw = { version = "0.2.1", features = ["alloc"] }
anyhow.workspace = true
base64ct.workspace = true
chacha20poly1305 = "0.10.1"
ecdsa = "0.16.9"
ecies = { version = "0.2.9", default-features = false, features = ["pure", "std"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
k256 = "0.13.4"
multibase.workspace = true
p256 = "0.13.2"
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_repr.workspace = true
sha2 = "0.10.8"
tracing.workspace = true
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
zeroize.workspace = true

[dev-dependencies]
hex = "0.4.3"
signature = "2.2.0"
tokio.workspace = true
