[package]
name = "credibil-jose"
description = "Credibil information security utilities for Javascript Object Signing and Encryption (JOSE) and JSON Web Tokens (JWT)."
license.workspace = true
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude = [".*", "snapshots/"]
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.1.2"

[lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
credibil-ecc.workspace = true
multibase = "0.9.1"
serde.workspace = true
serde_json = { version = "1.0.143", features = ["alloc"] }
tracing = "0.1.41"
zeroize.workspace = true

[dev-dependencies]
dashmap = "6.1.0"
tokio.workspace = true
