[package]
name = "credibil-jose"
description = "Credibil information security utilities for Javascript Object Signing and Encryption (JOSE) and JSON Web Tokens (JWT)."
license.workspace = true
readme = "README.md"
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude = [".*", "snapshots/"]
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version = "0.1.2"

[lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
credibil-ecc.workspace = true
multibase.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing = "0.1.41"
zeroize.workspace = true

[dev-dependencies]
dashmap.workspace = true
tokio.workspace = true
