[package]
name = "credibil-jose"
description = "Credibil utilities for JOSE and JWT"
readme = "README.md"
authors.workspace = true
categories = ["jose", "jwe", "jwk", "jwt", "jws"]
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
# crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
base64ct.workspace = true
credibil-ecc.workspace = true
multibase.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing = "0.1.41"
zeroize.workspace = true

[dev-dependencies]
dashmap.workspace = true
tokio.workspace = true
