[package]
name = "credibil-keyring"
authors.workspace = true
description = "Key management sample code for testing"
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
ciborium = "0.2.2"
credibil-core.workspace = true
credibil-ecc.workspace = true
ecies.workspace = true
ed25519-dalek.workspace = true
serde.workspace = true
sha2.workspace = true
x25519-dalek.workspace = true
zeroize.workspace = true
