[package]
name = "test-kms"
description = "Naive key management to assist in testing signing and encryption."
license.workspace = true
authors.workspace = true
categories.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
keywords.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
blockstore = "0.7.1"
ciborium = "0.2.2"
cid = "0.11.1"
credibil-ecc.workspace = true
ecies = { version = "0.2.9", default-features = false, features = ["pure", "std"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
multihash-codetable = { version = "0.1.4", features = ["sha2"] }
serde.workspace = true
sha2 = "0.10.9"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }

[dev-dependencies]
tokio.workspace = true
